Fix price tag in cloudplugin info window on higher resolution

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -985,6 +985,9 @@ header#pedalboard-actions {
       background-color: #111;
       padding: 15px;
       border: 2px solid #333;
+      .row-fluid {
+          position: relative;
+      }
     }
     .close {
       color: #fff;
@@ -1430,6 +1433,7 @@ header#pedalboard-actions {
     background: url("/img/trial.svg") no-repeat center center;
     background-size: contain;
     opacity: 0.4;
+    z-index: 11 !important;
 }
 
 .demo-mask {
