fix: floating "trial" stamp over bottom menu when plugin repository is hidden

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7426,6 +7426,7 @@ header#pedalboard-actions {
   overflow: hidden;
   position: relative;
   width: 100%;
+  z-index: 1;
 }
 #plugins-library #plugins-list .nav {
   background: url(../img/nav-left.png) 50% 50% no-repeat;
