--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -833,6 +833,7 @@ header#pedalboard-actions {
       overflow: hidden;
       position: relative;
       width: 100%;
+      z-index: 1;
       .nav {
         background: url(../img/nav-left.png) 50% 50% no-repeat;
         cursor: pointer;
