Proper "Licensed" label "Install Trial"/"Remove Trial"/"Upgrade Trial" action buttons for commercial plugins

--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -173,6 +173,15 @@
           transform: rotate(0deg) scale(1.3);
           width: 80px;
         }
+        span.licensed {
+          position: absolute;
+          top: 25px;
+          margin-left: 98px;
+          padding: 3px 0;
+          transform: rotate(0deg) scale(1.3);
+          width: 113px;
+          text-align: center;
+        }
         span.price-container {
           margin-left: 170px;
           width: 200px;
@@ -321,8 +330,8 @@
           content: "LICENSED";
       }
       position: absolute;
-      top: 15px;
-      left: -25px;
+      top: 13px;
+      left: -30px;
       padding: 3px 27px;
       transform: rotate(-45deg);
   }
