--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -23,7 +23,9 @@
         </span>
         {{/price}}
         {{#licensed}}
-        <span class="licensed"></span>
+        <span class="price-container">
+          <span class="licensed"></span>
+        </span>
         {{/licensed}}
     </div>
 </div>
