--- a/html/css/main.css
+++ b/html/css/main.css
@@ -5689,6 +5689,15 @@ button.close {
   transform: rotate(0deg) scale(1.3);
   width: 80px;
 }
+.cloud-plugins .cloud-plugin:hover span.licensed {
+  position: absolute;
+  top: 25px;
+  margin-left: 98px;
+  padding: 3px 0;
+  transform: rotate(0deg) scale(1.3);
+  width: 113px;
+  text-align: center;
+}
 .cloud-plugins .cloud-plugin:hover span.price-container {
   margin-left: 170px;
   width: 200px;
@@ -5828,8 +5837,8 @@ button.close {
   background-color: #883996;
   border: 1px solid #883996;
   position: absolute;
-  top: 15px;
-  left: -25px;
+  top: 13px;
+  left: -30px;
   padding: 3px 27px;
   transform: rotate(-45deg);
 }
