--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -238,6 +238,97 @@ hr.dotted {
   }
 }
 
+#top-menu {
+    width: 225px;
+    height: 45px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 999999;
+    background-color: #111;
+    background-position: 3px 50%;
+    background-size: 36px;
+    background-repeat: no-repeat;
+    background-image: url(../img/icons/36/mod.png);
+    padding-left: 45px;
+
+    > div.icon {
+	height: 45px;
+	width: 45px;
+	float: left;
+	cursor: pointer;
+	> img {
+	    margin: 5px 0 0 6px;
+	}
+	&.selected {
+	    background-color: #000;
+	}
+	> a {
+	    display: block;
+	    height: 45px;
+	    width: 45px;
+	}
+    }
+
+    #mod-plugins {
+	background-image: url(../img/menu-icons-sprite.png);
+	background-position: -45px top;
+	background-repeat: no-repeat;
+	transition: all 0.33s;
+    }
+    #mod-plugins:hover {
+	background-color: #000;
+	background-position: -45px bottom;
+    }
+    #mod-plugins.selected {
+	background-color: #000;
+	background-position: -45px bottom;
+    }
+    #mod-cloud-plugins {
+	background-image: url(../img/menu-icons-sprite.png);
+	background-position: -315px top;
+	background-repeat: no-repeat;
+	transition: all 0.33s;
+    }
+    #mod-cloud-plugins:hover {
+	background-color: #000;
+	background-position: -315px bottom;
+    }
+    #mod-cloud-plugins.selected {
+	background-color: #000;
+	background-position: -315px bottom;
+    }
+    #mod-pedalboard {
+	background-image: url(../img/menu-icons-sprite.png);
+	background-position: -90px top;
+	background-repeat: no-repeat;
+	transition: all 0.33s;
+    }
+    #mod-pedalboard:hover {
+	background-color: #000;
+	background-position: -90px bottom;
+    }
+    #mod-pedalboard.selected {
+	background-color: #000;
+	background-position: -90px bottom;
+    }
+    #mod-bank {
+	background-image: url(../img/menu-icons-sprite.png);
+	background-position: -135px top;
+	background-repeat: no-repeat;
+	transition: all 0.33s;
+    }
+    #mod-bank:hover {
+	background-color: #000;
+	background-position: -135px bottom;
+    }
+    #mod-bank.selected {
+	background-color: #000;
+	background-position: -135px bottom;
+    }
+    
+}
+
 #main-menu {
   background: #111;
   bottom: 0;
@@ -278,62 +369,6 @@ hr.dotted {
     &.selected {
       background-color: #000;
       background-position: 0 bottom;
-    }
-  }
-  #mod-plugins {
-    background-image: url(../img/menu-icons-sprite.png);
-    background-position: -45px top;
-    background-repeat: no-repeat;
-    transition: all 0.33s;
-    &:hover {
-      background-color: #000;
-      background-position: -45px bottom;
-    }
-    &.selected {
-      background-color: #000;
-      background-position: -45px bottom;
-    }
-  }
-  #mod-cloud-plugins {
-    background-image: url(../img/menu-icons-sprite.png);
-    background-position: -315px top;
-    background-repeat: no-repeat;
-    transition: all 0.33s;
-    &:hover {
-      background-color: #000;
-      background-position: -315px bottom;
-    }
-    &.selected {
-      background-color: #000;
-      background-position: -315px bottom;
-    }
-  }
-  #mod-pedalboard {
-    background-image: url(../img/menu-icons-sprite.png);
-    background-position: -90px top;
-    background-repeat: no-repeat;
-    transition: all 0.33s;
-    &:hover {
-      background-color: #000;
-      background-position: -90px bottom;
-    }
-    &.selected {
-      background-color: #000;
-      background-position: -90px bottom;
-    }
-  }
-  #mod-bank {
-    background-image: url(../img/menu-icons-sprite.png);
-    background-position: -135px top;
-    background-repeat: no-repeat;
-    transition: all 0.33s;
-    &:hover {
-      background-color: #000;
-      background-position: -135px bottom;
-    }
-    &.selected {
-      background-color: #000;
-      background-position: -135px bottom;
     }
   }
   #banks-saving {
