--- a/html/css/main.css
+++ b/html/css/main.css
@@ -6888,6 +6888,21 @@ hr.dotted {
   border-width: 0 0 0 1px;
   float: right;
 }
+#main-menu #mod-settings {
+  font-family: fontello !important;
+  font-size: 28px;
+  padding: 3px 10px;
+  color: #fff;
+  opacity: 0.66;
+  cursor: pointer;
+  transition: all 0.33s;
+}
+#main-menu #mod-settings:after {
+  content: '\e800';
+}
+#main-menu #mod-settings:hover {
+  opacity: 1;
+}
 #main-menu #mod-update {
   background-image: url(../img/icons/36/update.png);
 }
@@ -7162,7 +7177,7 @@ header#pedalboard-actions {
 #mod-devices-window .progressbar,
 #mod-upgrade .progressbar {
   background-color: #8888ff;
-  height: 20px;
+  height: 18px;
 }
 #mod-devices-window {
   max-width: 600px;
@@ -7956,4 +7971,24 @@ header#pedalboard-actions {
 }
 .alert-danger {
   border-color: #c00;
+}
+#go-back {
+  width: 200px;
+  text-align: left;
+  margin: 20px 0 0 0;
+  background: none;
+  border: none;
+  font-size: 15px;
+  color: #fff !important;
+  font-family: fontello !important;
+}
+#go-back:before {
+  content: '\e803';
+}
+#go-back a {
+  padding-left: 5px;
+  color: #fff !important;
+}
+#go-back a:hover {
+  text-decoration: none;
 }
