fix: return link in settings page didn't work in firefox. MD-1533

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -1479,16 +1479,15 @@ header#pedalboard-actions {
 	background: none;
 	border: none;
 	font-size: 15px;
-	&:before {
-		content: '\e803';
-	}
+	padding: 5px;
 	color: #fff !important;
-	font-family: fontello !important;
-	a {
-		&:hover {
-			text-decoration: none;
+	span {
+		&:before {
+			content: '\e803';
 		}
-		padding-left: 5px;
-		color: #fff !important;
+		font-family: fontello !important;
+	}
+	&:hover {
+		text-decoration: none;
 	}
 }
