--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7979,16 +7979,15 @@ header#pedalboard-actions {
   background: none;
   border: none;
   font-size: 15px;
+  padding: 5px;
   color: #fff !important;
+}
+#go-back span {
   font-family: fontello !important;
 }
-#go-back:before {
+#go-back span:before {
   content: '\e803';
 }
-#go-back a {
-  padding-left: 5px;
-  color: #fff !important;
-}
-#go-back a:hover {
+#go-back:hover {
   text-decoration: none;
 }
