--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -446,7 +446,9 @@ hr.dotted {
   #mod-settings {
 	  font-family: fontello !important;
 	  font-size: 28px;
-	  padding: 3px 10px;
+	  padding-top: 3px;
+	  padding-left: 5px;
+	  position: relative
 	  color: #fff;
 	  opacity: 0.66;
 	  cursor: pointer;
