--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -236,7 +236,77 @@
        .actions span.duplicate {
         margin: 0 6px;
       }
-  }
+	}
+	.featured-plugins {
+		width: 100%;
+		height: 300px;
+		position: relative;
+		.featured {
+			transition: all 2s;
+			position: absolute;
+			top: 0;
+			height: 200px !important;
+			opacity: 0.2;
+			display: none;
+			h2 {
+				text-align: center;
+			}
+			img {
+				width: auto;
+				height: auto;
+				margin: auto;
+				display: block;
+				max-height: 80%;
+				max-width: 250px;
+			}
+		}
+		.left {
+			transition: all 2s;
+			left: 80px;
+			display: block !important;
+		}
+		.right {
+			transition: all 2s;
+			right: 80px;
+			display: block !important;
+		}
+		.main {
+			transition: all 2s;
+			display: block !important;
+			position: relative !important;
+			margin: auto;
+			opacity: 1 !important;
+			p {
+				text-align: center;
+			}
+			img {
+				max-height: 100% !important;
+				max-width: 350px !important;
+			}
+		}
+
+		.left-arrow {
+			left: 20px;
+			&:before {
+				content: "<";
+			}
+		}
+
+		.right-arrow {
+			right: 20px;
+			&:before {
+				content: ">";
+			}
+		}
+
+		.left-arrow, .right-arrow {
+			position: absolute;
+			top: 100px;
+			font-size: 60px;
+			z-index: 1000;
+			cursor: pointer;
+		}
+	}
 }
 
 .plugin-container {
@@ -287,3 +357,4 @@
     }
   }
 }
+
