--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -242,11 +242,12 @@
 		height: 300px;
 		position: relative;
 		.featured {
+			cursor: pointer;
 			transition: all 2s;
 			position: absolute;
 			top: 0;
 			height: 200px !important;
-			opacity: 0.2;
+			opacity: 0.4;
 			display: none;
 			h2 {
 				text-align: center;
@@ -261,17 +262,14 @@
 			}
 		}
 		.left {
-			transition: all 2s;
 			left: 80px;
 			display: block !important;
 		}
 		.right {
-			transition: all 2s;
 			right: 80px;
 			display: block !important;
 		}
 		.main {
-			transition: all 2s;
 			display: block !important;
 			position: relative !important;
 			margin: auto;
