--- a/html/include/featuredplugin.html
+++ b/html/include/featuredplugin.html
@@ -1,5 +1,7 @@
 <div class="featured" mod-role="cloud-plugin" mod-uri="{{uri}}" data-priority="{{featured.priority}}">
-  <h2>{{label}}</h2>
-  <img src="{{screenshot_href}}"/>
-  <p>{{featured.headline}}</p>
+  <div class="box">
+	<h2>{{label}}</h2>
+	<img src="{{screenshot_href}}"/>
+	<p>{{featured.headline}}</p>
+  </div>
 </div>
