--- a/html/include/featuredplugin.html
+++ b/html/include/featuredplugin.html
@@ -1,7 +1,10 @@
 <div class="featured" mod-role="cloud-plugin" mod-uri="{{uri}}" data-priority="{{featured.priority}}">
   <div class="box">
-	<h2>{{label}}</h2>
-	<img src="{{screenshot_href}}"/>
-	<p>{{featured.headline}}</p>
+	<div class="inner-box">
+	  <h2>{{label}}</h2>
+	  <img src="{{screenshot_href}}"/>
+	  <p>{{featured.headline}}</p>
+	  <button>Details</button>
+	</div>
   </div>
 </div>
