Renamed "Unstable" to "Beta"

--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -392,7 +392,7 @@
     border: 1px solid #FF2927;
     background-color: #FF2927;
     &:after {
-      content: "unstable";
+      content: "beta";
     }
   }
   .status.demo {
