layout adjustments in featured plugins section

--- a/html/include/featuredplugin.html
+++ b/html/include/featuredplugin.html
@@ -2,7 +2,9 @@
   <div class="box">
 	<div class="inner-box">
 	  <h3>{{label}}</h3>
-	  <img src="{{screenshot_href}}"/>
+	  <div class="img-container">
+		<img src="{{screenshot_href}}"/>
+	  </div>
 	  <p>{{featured.headline}}</p>
 	  <button>Details</button>
 	</div>
