--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -276,8 +276,8 @@
 			position: absolute;
 			top: 0;
 			bottom: 0;
-			right: 25px;
-			left: 25px;
+			right: 90px;
+			left: 90px;
 			height: 380px !important;
 			.slick-list {
 				height: 380px !important;
@@ -341,14 +341,15 @@
 				&:before {
 					font-size: 60px;
 				}
+				width: 60px;
+				height: 60px;
 				top: 200px;
-				z-index: 100;
 			}
 			.slick-prev {
-				left: -10px !important;
+				left: -70px !important;
 			}
 			.slick-next {
-				right: 30px !important;
+				right: -70px !important;
 			}
 		}
 	}
