BETA label on plugin info

--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -18,6 +18,9 @@
                   {{#demo}}
                     <div class="demo-plugin demo-mask" title="This plugin is for demo purposes only and shall not be used live or in a studio"></div>
                   {{/demo}}
+                  {{^stable}}
+                    <div class="beta">BETA</div>
+                  {{/stable}}
                     <img src="{{screenshot_href}}">
                 </figure>
 
