--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -1026,6 +1026,17 @@ header#pedalboard-actions {
       min-height: 9em;
       display: inline-block;
       z-index: 0;
+      div.beta {
+          background-color: #FF2927;
+          font-family: "cooper hewitt", sans-serif;
+          font-weight: 700;
+          padding: 5px 10px;
+          color: white;
+          position: absolute;
+          top: 18px;
+          left: 30px;
+          font-size: 16px;
+      }
     }
     figure {
       .make-md-column(4);
