--- a/html/include/cloudplugin.html
+++ b/html/include/cloudplugin.html
@@ -27,5 +27,10 @@
           <span class="licensed"></span>
         </span>
         {{/licensed}}
+        {{#coming}}
+        <span class="price-container">
+          <span class="coming-soon"></span>
+        </span>
+        {{/coming}}
     </div>
 </div>
