--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -12,7 +12,11 @@
             <div class="description-licensed"></div>
           </div>
           {{/licensed}}
-          
+          {{#coming}}
+          <div class="description-price-container">
+            <div class="description-coming-soon"></div>
+          </div>
+          {{/coming}}
             <div class="span10 offset1 clearfix">
                 <figure class="screenshot">
                   {{#demo}}
