fix: share button being blocked by adblockers

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -611,7 +611,7 @@ header#pedalboard-actions,
             background-color: @brand-primary;
         }
     }
-    &.js-share {
+    &.js-cloud {
       background-image: url(../img/icn-share.png);
       background-size: 32px;
       background-position: 5px center;
