fix: store works properly when there's no internet connection or shopify is offline

--- a/html/css/less/cloud_plugins.less
+++ b/html/css/less/cloud_plugins.less
@@ -501,7 +501,7 @@
 	  background-color: @brand-success;
 	  border: 1px solid @brand-success;
 	  &:before {
-		  content: "COMING SOON";
+		  content: "TRIAL ONLY";
 	  }
 	  position: absolute;
 	  top: 26px;
@@ -568,7 +568,7 @@
           background-color: @brand-success;
           border: 1px solid @brand-success;
           &:before {
-              content: "COMING SOON";
+              content: "TRIAL ONLY";
           }
           position: relative;
           top: 50px;
