All information in UI is properly updated when new licenses arrive. Now elements are refreshed instead of component reloading No need to close windows anymore.

--- a/html/include/cloudplugin_info.html
+++ b/html/include/cloudplugin_info.html
@@ -1,4 +1,4 @@
-<div class="js-close plugin-info plugin-container">
+<div class="js-close plugin-info plugin-container" mod-uri="{{escaped_uri}}">
     <div class="container box">
         <div class="row-fluid clearfix">
           <span class="js-close alignright btn btn-mini btn-danger">Close</span>
