fix: While the Plugin Store is open buttons "120 BPM" and "MIDI PORTS" do not work properly

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -696,6 +696,7 @@ header#pedalboard-actions {
   left: initial;
   background: rgba(17, 17, 17, 0.9);
   padding: 50px 40px 15px 40px;
+  z-index: 1001;
 }
 
 #plugins-library {
