Removed the navigation configuration from the 'Banks' site. 'bankAddressing' is now 'bankTitle'.
I also removed commented code from 'html/js/banks.js'.

--- a/html/css/main-preLess.css
+++ b/html/css/main-preLess.css
@@ -1259,7 +1259,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', end
     top:68px;
     width:45%;
 }
-#bank-addressings {
+#bank-title {
     background:#333;
     left:20%;
     height:75px;
