Changed transport window layout and added midi clock slave item to sync mode list

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -696,6 +696,14 @@ header#pedalboard-actions {
   left: initial;
   background: rgba(17, 17, 17, 0.9);
   padding: 50px 40px 15px 40px;
+  .mod-midi-icon {
+    width: auto !important;
+    padding-left: 25px;
+    background-position: 5% 45% !important;
+    background-image: url(../img/icons/25/midi.png);
+    background-size: 15px;
+    background-repeat: no-repeat;
+  }
 }
 
 #plugins-library {
