Changed transport state and section UI with (placeholder) icons

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -367,12 +367,12 @@ hr.dotted {
     background-image: url(../img/icons/25/midi.png);
   }
   #mod-transport-icon {
-    background-image: url(../img/icons/25/transport.png);
+    background-image: url(../img/icons/25/stop.png);
     font-family: monospace;
     width: 10.5em !important;
     text-align: right;
     &.playing {
-      background-color: @brand-primary;
+      background-image: url(../img/icons/25/transport.png);
     }
   }
   .mod-bypass {
