--- a/html/include/addressing.html
+++ b/html/include/addressing.html
@@ -33,6 +33,20 @@
                         <select class="form-control" name="steps"></select>
                     </div>
                 </div>
+                <div class="tempo form-group clearfix">
+                  <label>Tempo</label>
+                  <div>
+                    <input type="checkbox" name="tempo-checkbox"> Translate value to musical tempo
+                  </div>
+                  <div>
+                    <span>Note value:</span>
+                    <select class="form-control" name="divider">
+                      <option value="8">1/8</option>
+                      <option value="4">1/4</option>
+                      <option value="2">1/2</option>
+                    </select>
+                  <div>
+                </div>
             </div>
             <hr class="col-xs-12" style="padding:0" />
             <div class="textright clearfix">
