--- a/html/include/bank_pedalboard.html
+++ b/html/include/bank_pedalboard.html
@@ -1,6 +1,7 @@
 <div class="clearfix">
     <div class="pedalboard clearfix">
         <div class="info clearfix">
+            <span class="title alignleft">{{index}}</span>
             <span class="title js-title alignleft">{{title}}</span>
             <span class="js-remove remove" title="remove pedalboard"></span>
         </div>
